[gd_scene load_steps=3 format=3 uid="uid://c0gifduxh5ilc"]

[ext_resource type="Script" path="res://addons/ITWCdt/editorControl/load_container.gd" id="1_gey31"]
[ext_resource type="Script" path="res://addons/ITWCdt/editorControl/categorie.gd" id="1_sliv6"]

[node name="VBoxContainer" type="VBoxContainer" node_paths=PackedStringArray("labelName", "key", "value", "loadContainer")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_sliv6")
labelName = NodePath("HBoxContainer/Label")
key = NodePath("onLoadContainer/keyPanel/key")
value = NodePath("onLoadContainer/valuePanel/value")
loadContainer = NodePath("loadContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "test"
horizontal_alignment = 1

[node name="remove" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "-"

[node name="onLoadContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="keyPanel" type="PanelContainer" parent="onLoadContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="key" type="TextEdit" parent="onLoadContainer/keyPanel"]
layout_mode = 2

[node name="valuePanel" type="PanelContainer" parent="onLoadContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3

[node name="value" type="TextEdit" parent="onLoadContainer/valuePanel"]
layout_mode = 2

[node name="Button" type="Button" parent="onLoadContainer"]
layout_mode = 2
text = "+"

[node name="loadContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("parent")]
layout_mode = 2
script = ExtResource("1_gey31")
category = "OnLoad"
parent = NodePath("..")

[connection signal="button_down" from="HBoxContainer/remove" to="." method="_on_remove_button_down"]
[connection signal="button_down" from="onLoadContainer/Button" to="." method="_on_game_load_button_pressed"]
